[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/scatter/src/core/scatter.gd" type="Script" id=1]
[ext_resource path="res://addons/scatter/src/core/scatter_item.gd" type="Script" id=2]
[ext_resource path="res://addons/scatter/demos/assets/grass/data/m_grass_52.tres" type="Material" id=3]
[ext_resource path="res://src/item/GrassItem.gd" type="Script" id=4]
[ext_resource path="res://addons/scatter/demos/assets/leaves/data/sprite_0081.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/footstep_grass_000.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/impactPunch_medium_002.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/Particles/transparant/magic_05.png" type="Texture" id=9]
[ext_resource path="res://res/item/FlowerRed.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.796171, 1, 0.831703 )

[sub_resource type="Curve3D" id=24]
bake_interval = 0.1
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -3.23868, 0, -12.0322, 0, 0, 0, 0, 0, 0, -3.23868, 0, -12.0322 ),
"tilts": PoolRealArray( 0, 0 )
}
up_vector_enabled = false

[sub_resource type="ArrayMesh" id=25]
surfaces/0 = {
"aabb": AABB( -0.287418, -0.0355886, -0.250463, 0.689469, 0.569355, 0.541144 ),
"array_data": PoolByteArray( 145, 37, 191, 61, 193, 28, 255, 62, 174, 60, 128, 190, 239, 34, 98, 67, 85, 57, 0, 0, 136, 37, 191, 61, 250, 208, 23, 188, 211, 11, 98, 188, 239, 34, 98, 67, 85, 57, 0, 60, 40, 92, 143, 62, 73, 232, 214, 60, 2, 81, 127, 61, 224, 30, 79, 71, 0, 60, 0, 60, 40, 92, 143, 62, 230, 164, 8, 63, 97, 132, 50, 190, 224, 30, 79, 71, 0, 60, 0, 0, 40, 92, 143, 190, 73, 232, 214, 60, 2, 81, 127, 61, 32, 30, 111, 39, 0, 0, 0, 60, 145, 37, 191, 189, 250, 208, 23, 188, 211, 11, 98, 188, 17, 34, 117, 49, 85, 53, 0, 60, 136, 37, 191, 189, 193, 28, 255, 62, 174, 60, 128, 190, 17, 34, 117, 49, 85, 53, 0, 0, 40, 92, 143, 190, 230, 164, 8, 63, 97, 132, 50, 190, 32, 30, 111, 39, 0, 0, 0, 0, 148, 190, 124, 190, 222, 182, 6, 63, 152, 218, 177, 61, 95, 64, 138, 104, 74, 57, 0, 0, 154, 65, 169, 60, 178, 129, 185, 35, 98, 121, 183, 61, 97, 68, 134, 101, 62, 53, 0, 60, 23, 77, 229, 189, 224, 5, 184, 163, 65, 203, 73, 189, 101, 75, 130, 95, 93, 57, 0, 60, 252, 68, 136, 190, 51, 250, 205, 62, 15, 80, 170, 58, 101, 75, 130, 95, 93, 58, 137, 51, 84, 92, 236, 189, 92, 36, 166, 62, 40, 212, 148, 62, 87, 50, 147, 115, 141, 51, 248, 52, 88, 15, 156, 189, 25, 138, 216, 59, 31, 190, 48, 188, 218, 51, 46, 57, 93, 57, 0, 60, 120, 154, 148, 187, 57, 110, 81, 188, 223, 2, 191, 61, 218, 51, 46, 57, 144, 58, 0, 60, 226, 23, 169, 62, 8, 123, 139, 62, 252, 195, 61, 61, 218, 51, 46, 57, 143, 59, 244, 55, 168, 217, 205, 62, 127, 169, 229, 62, 166, 222, 1, 190, 218, 51, 46, 57, 93, 58, 137, 51, 70, 199, 45, 62, 11, 9, 209, 62, 255, 190, 51, 62, 161, 114, 177, 76, 74, 57, 0, 0, 0, 108, 12, 62, 99, 197, 17, 189, 95, 17, 144, 60, 160, 106, 181, 75, 62, 53, 0, 60, 129, 192, 204, 59, 235, 239, 144, 56, 122, 160, 183, 61, 156, 96, 187, 72, 93, 57, 0, 60, 87, 118, 165, 61, 28, 217, 166, 62, 12, 120, 59, 62, 156, 96, 187, 72, 93, 58, 137, 51, 94, 41, 162, 62, 134, 246, 83, 62, 67, 67, 11, 62, 97, 109, 165, 83, 141, 51, 248, 52, 192, 172, 234, 61, 89, 241, 33, 62, 0, 203, 112, 62, 78, 113, 131, 74, 93, 44, 28, 57, 104, 46, 163, 61, 126, 97, 131, 187, 75, 27, 217, 61, 78, 113, 131, 74, 120, 49, 0, 60, 34, 25, 212, 187, 42, 211, 56, 187, 76, 147, 181, 61, 78, 113, 131, 74, 62, 53, 0, 60, 49, 128, 92, 187, 241, 3, 204, 61, 211, 55, 42, 62, 78, 113, 131, 74, 194, 52, 46, 58, 17, 46, 152, 189, 77, 174, 210, 60, 80, 65, 127, 189, 161, 151, 171, 56, 93, 57, 0, 60, 84, 150, 28, 190, 208, 222, 89, 60, 182, 93, 19, 189, 161, 151, 171, 56, 144, 58, 0, 60, 108, 40, 147, 190, 214, 127, 134, 62, 52, 211, 200, 189, 161, 151, 171, 56, 143, 59, 244, 55, 119, 238, 122, 190, 212, 9, 210, 62, 7, 12, 44, 190, 161, 151, 171, 56, 93, 58, 137, 51 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 6, 0, 1, 0, 5, 0, 6, 0, 0, 0, 1, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 9, 0, 12, 0, 8, 0, 13, 0, 15, 0, 14, 0, 16, 0, 15, 0, 13, 0, 17, 0, 19, 0, 18, 0, 17, 0, 20, 0, 19, 0, 18, 0, 21, 0, 17, 0, 22, 0, 24, 0, 23, 0, 22, 0, 25, 0, 24, 0, 26, 0, 28, 0, 27, 0, 29, 0, 28, 0, 26, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 54,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 30
}

[sub_resource type="MultiMesh" id=26]
transform_format = 1
instance_count = 6
visible_instance_count = 6
mesh = SubResource( 25 )
transform_array = PoolVector3Array( 5.93762, 0, 0.735667, 0, 5.98302, 0, -0.735667, 0, 5.93762, -3.20846, 0, -11.9432, 6.09623, 0, -4.87549, 0, 7.80605, 0, 4.87549, 0, 6.09623, -3.0385, 0, -11.6698, -3.08759, 0, -7.25371, 0, 7.8835, 0, 7.25371, 0, -3.08759, -3.42517, 0, -12.1811, -6.82439, 0, -0.276792, 0, 6.83, 0, 0.276792, 0, -6.82439, -3.3243, 0, -12.1436, -5.04028, 0, 5.81739, 0, 7.69717, 0, -5.81739, 0, -5.04028, -3.4816, 0, -12.4522, 4.11573, 0, 5.13651, 0, 6.58202, 0, -5.13651, 0, 4.11573, -3.08936, 0, -12.4512 )

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = true
gravity = Vector3( 1, 1, 0 )
angular_velocity = 30.0
linear_accel = 18.02
radial_accel = 12.61
tangential_accel = 7.21
damping = 5.0
damping_random = 1.0
angle = 20.0

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_color = Color( 0.945098, 0.929412, 0.0431373, 1 )
albedo_texture = ExtResource( 9 )

[sub_resource type="QuadMesh" id=23]
material = SubResource( 22 )

[sub_resource type="Curve" id=17]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.906404, 360 ), 2092.38, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
curve = SubResource( 17 )

[sub_resource type="Curve" id=12]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995074, 322.364 ), -601.688, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 360, 0 )
gravity = Vector3( 1, 1, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.34
angular_velocity = 30.0
angular_velocity_curve = SubResource( 13 )
linear_accel = 2.0
radial_accel = 10.0
radial_accel_random = 1.0
tangential_accel = 10.81
tangential_accel_random = 1.0
damping = 3.0
damping_random = 0.28
angle = 180.0
angle_random = 1.0
angle_curve = SubResource( 18 )

[sub_resource type="SpatialMaterial" id=19]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.376471, 0.768627, 0.309804, 1 )
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=15]
material = SubResource( 19 )

[node name="GrassItem" type="Area"]
audio_bus_override = true
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0985742, 0.591263, -0.186606 )
shape = SubResource( 6 )

[node name="GrassScatter" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.30283, 0, 11.896 )
curve = SubResource( 24 )
script = ExtResource( 1 )
curve_tolerance_degrees = 2.0
global_seed = 1
force_update_when_loaded = false
make_children_unselectable = false
preview_count = 1
modifier_stack = Object(Node,"_import_path":NodePath(""),"pause_mode":0,"process_priority":0,"script":Resource( "res://addons/scatter/src/core/modifier_stack.gd" ),"stack":[ Object(Node,"_import_path":NodePath(""),"pause_mode":0,"process_priority":0,"script":Resource( "res://addons/scatter/src/modifiers/distribute_inside_random.gd" ),"enabled":true,"display_name":"Distribute Inside (Random)","category":"Distribute","warning":"","warning_ignore_no_transforms":true,"warning_ignore_no_path":false,"override_global_seed":true,"custom_seed":0,"instance_count":6,"_rng":Object(RandomNumberGenerator,"seed":-5166024356887986631,"state":1408804768704559524,"script":null)
)
, Object(Node,"_import_path":NodePath(""),"pause_mode":0,"process_priority":0,"script":Resource( "res://addons/scatter/src/modifiers/randomize_transforms.gd" ),"enabled":true,"display_name":"Randomize Transforms","category":"Edit","warning":"","warning_ignore_no_transforms":false,"warning_ignore_no_path":true,"override_global_seed":false,"custom_seed":3,"local_space":true,"position":Vector3( 0.3, 0, 0.2 ),"rotation":Vector3( 0, 360, 0 ),"scale":Vector3( 1, 1, 1 ),"_rng":Object(RandomNumberGenerator,"seed":8515334422280496548,"state":1860576859780299891,"script":null)
)
 ],"just_created":false,"undo_redo":Object(UndoRedo,"script":null)
)


[node name="ScatterItem" type="Spatial" parent="GrassScatter"]
visible = false
script = ExtResource( 2 )
proportion = 10
item_path = "res://addons/scatter/demos/assets/grass/grass52.tscn"
scale_modifier = 4.5
materials = [ null ]
merge_target_meshes = true
cast_shadow = 1

[node name="MultiMeshInstance" type="MultiMeshInstance" parent="GrassScatter/ScatterItem"]
multimesh = SubResource( 26 )
__meta__ = {
"_edit_group_": false,
"_edit_lock_": true
}

[node name="Flower" parent="GrassScatter" instance=ExtResource( 10 )]
transform = Transform( 0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, -3.39812, 0, -12.0942 )
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="particle_congrate" type="Particles" parent="."]
emitting = false
amount = 40
explosiveness = 1.0
process_material = SubResource( 21 )
draw_pass_1 = SubResource( 23 )

[node name="Particle" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0403759, 0.999185, 0, -0.999185, 0.0403759, 0, 2.70797, 0 )
emitting = false
amount = 25
preprocess = 1.0
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -2.74856, -4, -2.14893, 5.49712, 8, 4.29785 )
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )

[node name="Tween" type="Tween" parent="."]

[node name="Audio" type="Spatial" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource( 7 )
unit_db = 25.0

[node name="FlowerPop" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource( 8 )
unit_db = 30.0

[connection signal="body_entered" from="." to="." method="_on_GrassItem_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
